css/style.css
/* regole generali */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


#app{
    background: linear-gradient(180deg, rgb(0,150,136) 15%, rgb(220,219,209) 15%);

}
#container{
    margin: auto;
    padding: 50px 0;
    max-width: 1200px;
    height: 800px;
}




/* aside bar */
aside{
    width: 30%;
    height: 100%;
    background-color: white;
    
}

aside nav{
    width: 100%;
    height: 10%;
}

aside nav.navbar{
    max-height: 100%;
    border-bottom: 1px solid gray;
}

/* notification bar */
#notify-bar{
    background-color: aqua;
    display: flex;
    align-items: center;
    width: 100%;
}


#notify-bar i{
    font-size: 25px;
    padding: 15px;
    margin: 10px;
    border-radius: 100%;
    background-color: white;
    text-align: center;
}

/* aside search bar */
#search-bar-container{
    width: 100%;
}


/* aside cards list */
#user-cards-container{
    height: 74%;
}

div#user-cards-container{
    overflow-y : scroll;
}

div#user-cards-container li{
    display: flex;
    align-items: center;
}
aside div.card{
    width: 100%;
    max-height: 100%;
}

aside div.card img{
    width: 100px;
    height: 100px;
}

.active-card{
    background-color: rgb(233,235,235);
}


/* main */

main{
    width: 70%;
    background-color: white;
    border-left: 1px grey solid;
}

main nav.navbar{
    height: 10%;
}

/* message tab */
#message-tab{
    height: 90%;
    background-color: rgb(229,221,212);
    border: 1px solid black;
    position: relative;
}
.message-box{
    width: 250px;
    min-height: 30px;
    border-radius: 50px;
    padding: 10px 15px;
    margin: 15px;
    position: relative;
}


.sent-messages{
    background-color: rgb(213,249,186);
    margin-left: 550px;
}

.received-messages{
    background-color: white;
}

.message-time{
    font-size: 10px;
    color: grey;
    position: absolute;
    margin-top:15px ;
    bottom: 0;
    right: 33px;
    
}

#message-bar{
    position: absolute;
    bottom: 0;
    width: 100%;
    background-color: rgb(243,238,234);
    padding: 5px;
}
#message-bar input{
    width: 80%;
    border: none;
    border-radius: 25px;
    padding: 5px;
}
#message-bar i{
    width: 10%;
    font-size: 20px;
    text-align: center;
}
.user-message{
    background-color: greenyellow;
}

.friend-message{
    background-color: white;
}

